# git-internals-study-session

./: pyproject.toml
nbs/: Git Internals.ipynb
